hid nav on mobile - fixed transition

--- a/templates/inner-anchor/inner-anchor.css
+++ b/templates/inner-anchor/inner-anchor.css
@@ -18,7 +18,7 @@
   transition: .5s;
 }
 
-.anchor-nav li.active {
+.anchor-nav li.active a {
   background: #4f4f4f;
   color: #fff;
 }
@@ -33,4 +33,11 @@
 
 .inner-anchor main .section .default-content-wrapper {
   margin-left: 290px;
+}
+
+
+@media (width < 1024px) {
+  .anchor-nav { display: none }
+
+  .inner-anchor main .section .default-content-wrapper { margin-left: 0 }
 }
